# ExpressAssistant

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/ren/expressassistant/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/ren/expressassistant/: MainActivity.java  NDKloader.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ren/expressassistant/: ExampleUnitTest.java
